# src/main/java/es/jmc/practica1/view/api/dtos/UserRequest.java
@@ -1,0 +1,3 @@
+package es.jmc.practica1.view.api.dtos;
+
+public record UserRequest(String nick, String email) { }
